# yolo-forklift-safety-hub

./: .gitignore  README.md  app.py  config.py  db.py  introduction.md  llm_client.py  logger.py  mqtt_client.py  publish_test.py  pyproject.toml  requirements.txt  run_test.py  展示用_叉车安全监控看板.html
backend/: api.py  main.py  paths.py  realtime.py  workers.py
backend/repositories/: database.py
backend/services/: app_service.py
docs/: TODO.md  communication-layer.md  image-upload-guide.md  introduction.md  ui-design-guide.md
frontend/: package-lock.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: GlassCard.vue  LineChart.vue  SidebarNav.vue
frontend/src/lib/: api.js
frontend/src/views/: Dashboard.vue  History.vue  Trend.vue
static/: main.js
templates/: dashboard.html  devices.html  index.html  logs.html
utils/: logger.py
vue-app/: index.html  package.json  vite.config.js
vue-app/src/: App.vue
vue-app/src/components/: AuroraBackground.vue  LineChart.vue  SidebarNav.vue
vue-app/src/lib/: auth.js
vue-app/src/router/: index.js
vue-app/src/views/: Dashboard.vue  Devices.vue  History.vue  Logs.vue  Trend.vue
